# Projet3

./: READ_ME  Schrodinger_1D.m  Shordinger1D_euler.m  alo.txt  eq_schro.m  eqdiff.m  euler.m  eulmod.m  rk4.m  run_kutt_2.m  run_kutt_4.m  simpson13.m  test.txt
Cpp Implementation/: Source.cpp
Cpp Implementation/implementation/: Domain.cpp
Cpp Implementation/include/: Domain.h
Cpp_Implementation/: READ_ME  Source.cpp
Cpp_Implementation/DiffElec/: CMakeLists.txt  build.sh
Cpp_Implementation/DiffElec/DiffElec/: Cpp_Implementation_Diffraction.cbp  Cpp_Implementation_Diffraction.depend  Cpp_Implementation_Diffraction.layout
Cpp_Implementation/DiffElec/cmake/Modules/: FindFFTW3.cmake  Findarmadillo.cmake
Cpp_Implementation/DiffElec/drivers/: CMakeLists.txt  main.cpp  parameters.ini
Cpp_Implementation/DiffElec/include/: diffelec
Cpp_Implementation/DiffElec/include/DiffElec_bits/: Domain.h  MM2.h  Pot.h  Potential.h  Psi.h  constants.h
Cpp_Implementation/DiffElec/python_module/: .plotTest.py.swn  .plotTest.py.swo  .writingDAT.py.swo  plotTest.py  test.  test.py  writingDAT.py
Cpp_Implementation/DiffElec/src/: Domain.cpp  MM2.cpp  Pot.cpp  Potential.cpp  Psi.cpp
Cpp_Implementation/DiffElec/tests/: CMakeLists.txt  UnitTest-Domain.cpp  UnitTest-MM2.cpp  UnitTest-Pot.cpp  UnitTest-Psi.cpp
Cpp_Implementation/diff_elec/: CMakeLists.txt  Doxyfile.in  build.sh
Cpp_Implementation/diff_elec/diff_elec/: Cpp_Implementation_Diffraction.cbp  Cpp_Implementation_Diffraction.layout
Cpp_Implementation/diff_elec/include/: diff_elec.h
Cpp_Implementation/diff_elec/src/: Domain.cpp
Cpp_Implementation/diff_elec/tests/: UnitTest-Domain.cpp
Exam/: Calcul_Mantisse.m  Finite difference.txt  Num_2.m  num3.m
FINAL/Crank-Nicholson - 1D/: crank_nicholson.m
FINAL/Crank-Nicholson - 1D - Convergence/: Schrodinger_1D_Crank_1_Convergence.m  analy_1D.m  wp_ini.m
FINAL/Crank-Nicholson - 2D/: MM2.m  Vid_making.m  barr.m  barr_simple.m
FINAL/Crank-Nicholson - 2D - Convergence/: CrankNicho2D_onvergence_theo.m  analy.m  vec2mat.m  wp_ini_2D.m
FINAL/Crank-Nicholson - 2D - Tunnel/: Effet_Tunnel_Graphiques.m  trapeze_2D.m
FINAL/Runge-Kutta 4 - 1D/: Schrodinger_1D_RK.m  eq_schro.m  run_kutt_3.m
FINAL/Runge-Kutta 4 - 1D - Convergence/: Schrodinger_1D_RK4_Convergence.m  run_kutt_4.m  wp_ini.m
Mini-Quiz/: MQ1.m
Mini-Quiz/MQ2/: MQ2.m
Mini-Quiz/MQ3/: MINI.docx  Quizz3.m
Mini-Quiz/MQ4/: MINIQUIZ_4_CODE_FINAL_VOIR_ENBAS_DU_DOC.m  Mini-Quiz4.txt
Schrodinger_1D/: Main.m  PaquetOnde.m  Psy_0.m  Schrodinger_1D - Copy.m  Schrodinger_1D.asv  Schrodinger_1D.m  TR_BDF2.m  crank_ite.m  crank_nicholson.asv  crank_nicholson.m  crank_nicholson_1D_ABC.m  crank_nicholson_ABC.m  def_crank.asv  def_crank.m  eq_schro.m  run_kutt_4.m
Schrodinger_1D/Crank Nicholson/: PaquetOnde.m  Schrodinger_1D_Crank.m  Schrodinger_1D_Crank_1_Convergence.m  Schrodinger_1D_Crank_Convergence.m  Schrodinger_Crank_Heiseberg.m  fft_wp.m  trapeze.m  wp_ini.m
Schrodinger_1D/Crank Nicholson/Old/: def_crank.m
Schrodinger_1D/Euler/: Shordinger1D_euler.m  eq_schro.m  euler.m  eulmod.m  wp_ini.m
Schrodinger_1D/Frontiere absorbante/: crank_nicholson_1D_ABC.m  crank_nicholson_ABC.m  wp_ini.m
Schrodinger_1D/Old/: Main.m  Psy_0.m
Schrodinger_1D/Runge Kutta 4/: Schrodinger_1D_RK4.m  Schrodinger_1D_RK4_Convergence.m  Schrodinger_RK4_Heisenberg.m  analy_1D.m  wp_ini.m
Schrodinger_2D/: Schrodinger_2D.m  barr.m  eq_schro_2D.m  run_kutt_4_2D.m  test_pot.m
Schrodinger_2D_Crank/: ABC_2D.m  CI.m  Coff_transmission_effet_tunnel.m  CrankNicho2D.asv  CrankNicho2D.m  CrankNicho2D_convergence.m  CrankNicho2D_onvergence_theo.m  CrankNicho2D_test.asv  CrankNicho2D_test.m  CrankNico2D_ABC_vraies_valeurs.m  EFFET_TUNNEL.m  Fraunhofer.m  MemoireVSdx.mat  Memoire_vs_dx.m  Psy_bas.m  Psy_droite.m  Psy_gauche.m  Psy_haut.m  TempsDeCalculVSdt.m  TempsDeCalculVSdx.m  V_potentiel.m  Vid_making.m  analy.m  ancien.m  barr.m  barr_inv.m  barr_simple.m  barr_simple_inv.m  crankNicho_convergence_old.m  effet_tunnel_making.m  indexeur.m  limit_code.m  ovenight.asv  ovenight.m  overnight.m  prop_th.m  test_pot.m  trapeze_2D.asv  trapeze_2D.m  vec2mat.m  (+1 more)
Schrodinger_2D_Crank/Old/: CrankNicho2D.m  Psy_bas.m  Psy_droite.m  Psy_gauche.m  Psy_haut.m  inte_test.m  test_pot.m
